--- a/Forside.html
+++ b/Forside.html
@@ -6,12 +6,28 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <meta name="description" content="*Beskrivelse af siden*">
     <meta name="keywords" content="*Keywords*">
-    <title>Min portfolio</title>
+    <title>MMN</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Om mig</h1>
+        <nav>
+            <ul class="Menu">
+                <li><a href="Forside.html">FORSIDE</a></li>
+                <li><a href="Portfolio.html">PORTFOLIO</a></li>
+            </ul>
+        </nav>
     </header>
+    <h1>OM MIG</h1>
+    <p> Mit navn er Marc, jeg er 20 år gammel, og jeg 
+        studerer lige nu Multimediedesign på Zealand i Køge. 
+        I min fritid dyrker jeg bodybuilding og laver grafisk design. 
+        Jeg har været freelance grafisk designer siden jeg var 14 år, 
+        og har derfor 6 års erfaring på nuværende tidspunkt. Her har jeg blot i mine
+        teenage år haft flere hundrede kunder. Jeg har også haft andre jobs, men jeg er
+        altså bedst når det handler om at ramme en bestemt målgruppe gennem
+        visuel kommunikation. Udover det har jeg som person et roligt sind, en
+        humoristisk sans, og så er jeg struktureret og arbejdsom.
+    </p>
 </body>
 </html>
