--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <meta name="description" content="*Beskrivelse af siden*">
     <meta name="keywords" content="*Keywords*">
-    <title>Min portfolio</title>
+    <title>MMN</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Portfolio</h1>
+        <nav>
+            <ul class="Menu">
+                <li><a href="Forside.html">FORSIDE</a></li>
+                <li><a href="Portfolio.html">PORTFOLIO</a></li>
+            </ul>
+        </nav>
     </header>
+    <h1>PORTFOLIO</h1>
+    <h2>EGNE GRAFISKE VÆRKER</h2>
 </body>
 </html>
