--- a/Forside.html
+++ b/Forside.html
@@ -29,5 +29,8 @@
         visuel kommunikation. Udover det har jeg som person et roligt sind, en
         humoristisk sans, og så er jeg struktureret og arbejdsom.
     </p>
+    <a href="Portfolio.html">
+        <button class="Portfolio-knap">PORTFOLIO</button>
+    </a>    
 </body>
 </html>
