Fikset portfolio-knap, tilføjet billede af mig selv og påbegyndt portfolioen

--- a/Forside.html
+++ b/Forside.html
@@ -19,6 +19,11 @@
         </nav>
     </header>
     <h1>OM MIG</h1>
+
+    <div class="Præsentationsbillede">
+        <img src="Billeder/Præsentationsbillede.png" alt="Præsentationsbillede" style="width:25%;height:25%;">
+    </div>
+
     <p> Mit navn er Marc, jeg er 20 år gammel, og jeg 
         studerer lige nu Multimediedesign på Zealand i Køge. 
         I min fritid dyrker jeg bodybuilding og laver grafisk design. 
@@ -29,8 +34,10 @@
         visuel kommunikation. Udover det har jeg som person et roligt sind, en
         humoristisk sans, og så er jeg struktureret og arbejdsom.
     </p>
+    <div class="wrapper">
     <a href="Portfolio.html">
         <button class="Portfolio-knap">PORTFOLIO</button>
     </a>    
+    </div>
 </body>
 </html>
