--- a/Portfolio.html
+++ b/Portfolio.html
@@ -20,5 +20,21 @@
     </header>
     <h1>PORTFOLIO</h1>
     <h2>EGNE GRAFISKE VÆRKER</h2>
+    <div class="Youtube-banners">
+        <h3>
+            YOUTUBE BANNERS: GAMING OG IKKE-GAMING RELATERET
+        </h3>
+        <img src="Billeder/Mylle.jpg" alt="Mylle" style="width:100%;height:100%;">
+        <img src="Billeder/DRS v2.jpg" alt="DRS" style="width:100%;height:100%;">
+        <img src="Billeder/xJumbq v2.jpg" alt="xJumbq" style="width:100%;height:100%;">
+        <img src="Billeder/Josefine Simone.jpg" alt="Josefine Simone" style="width:100%;height:100%;">
+        <img src="Billeder/Emil Topp.jpg" alt="Emil Topp" style="width:100%;height:100%;">
+    </div>
+    <div class="Reklamebillede">
+        <h3>
+            REKLAMEBILLEDE: G FUEL
+        </h3>
+        <img src="Billeder/Gfuel Cotton Candy - Advertisement.jpg" alt="G FUEL" style="width:100%;height:100%;">
+    </div>
 </body>
 </html>
