Opdatering af forside og portfolio

--- a/Forside.html
+++ b/Forside.html
@@ -19,11 +19,9 @@
         </nav>
     </header>
     <h1>OM MIG</h1>
-
     <div class="Præsentationsbillede">
         <img src="Billeder/Præsentationsbillede.png" alt="Præsentationsbillede" style="width:25%;height:25%;">
     </div>
-
     <p> Mit navn er Marc, jeg er 20 år gammel, og jeg 
         studerer lige nu Multimediedesign på Zealand i Køge. 
         I min fritid dyrker jeg bodybuilding og laver grafisk design. 
@@ -39,5 +37,10 @@
         <button class="Portfolio-knap">PORTFOLIO</button>
     </a>    
     </div>
+    <h1>KONTAKT</h1>
+    <p>
+        Udfyld kontaktformularen for at komme i kontakt med mig vedrørende køb, 
+        spørgsmål eller andet.
+    </p>
 </body>
 </html>
