--- a/Portfolio.html
+++ b/Portfolio.html
@@ -20,21 +20,159 @@
     </header>
     <h1>PORTFOLIO</h1>
     <h2>EGNE GRAFISKE VÆRKER</h2>
+    <!--Youtube-banners-->
+    <h3>
+        YOUTUBE BANNERS: GAMING OG IKKE-GAMING RELATERET
+    </h3>
     <div class="Youtube-banners">
-        <h3>
-            YOUTUBE BANNERS: GAMING OG IKKE-GAMING RELATERET
-        </h3>
         <img src="Billeder/Mylle.jpg" alt="Mylle" style="width:100%;height:100%;">
         <img src="Billeder/DRS v2.jpg" alt="DRS" style="width:100%;height:100%;">
         <img src="Billeder/xJumbq v2.jpg" alt="xJumbq" style="width:100%;height:100%;">
         <img src="Billeder/Josefine Simone.jpg" alt="Josefine Simone" style="width:100%;height:100%;">
         <img src="Billeder/Emil Topp.jpg" alt="Emil Topp" style="width:100%;height:100%;">
     </div>
+    <!--Reklamebillede-->
+    <h3>
+        REKLAMEBILLEDE: G FUEL
+    </h3>
     <div class="Reklamebillede">
-        <h3>
-            REKLAMEBILLEDE: G FUEL
-        </h3>
         <img src="Billeder/Gfuel Cotton Candy - Advertisement.jpg" alt="G FUEL" style="width:100%;height:100%;">
+    </div>
+    <!--Posters-->
+    <h3>
+        POSTERS: WWF OG BMW
+    </h3>
+    <div class="Posters">
+        <img src="Billeder/WWF (beskyttelse af næsehorn i Afrika) - Plakat V2.png" alt="G FUEL" style="width:50%;height:50%;">
+        <img src="Billeder/BMW i8 - Plakat.png" alt="WWF og BMW" style="width:50%;height:50%;">
+    </div>
+    <!--Tøj-design-->
+    <h3>
+        TØJ DESIGN: EL AMOR
+    </h3>
+    <div class="Tøj-design">
+        <img src="Billeder/El Amor showcase.jpg" alt="El Amor" style="width:75%;height:75%;">
+    </div>
+    <!--Logo-designs-->
+    <h3>
+        LOGO-DESIGNS: ALMINDELIGE OG ILLUSTRERET
+    </h3>
+    <div class="Logo-designs-almindelige">
+        <img src="Billeder/Hafnium.jpg" alt="Hafnium" style="width:20%;height:20%;margin:10px;">
+        <img src="Billeder/KenzaClub.jpg" alt="KenzaClub" style="width:20%;height:20%;margin:10px;">
+        <img src="Billeder/El Amor.jpg" alt="El Amor" style="width:20%;height:20%;margin:10px;">
+        <img src="Billeder/CAF Consulting.jpg" alt="CAF Consulting" style="width:20%;height:20%;margin:10px;">
+    </div>
+    <div class="Logo-designs-illustreret">
+        <img src="Billeder/Lionpvp.jpg" alt="Lionpvp" style="width:20%;height:20%;margin:10px;">
+        <img src="Billeder/Squid.jpg" alt="Squid" style="width:20%;height:20%;margin:10px;">
+        <img src="Billeder/IzeKoID.jpg" alt="IzeKoID" style="width:20%;height:20%;margin:10px;">
+        <img src="Billeder/Distance Esport.jpg" alt="Distance Esport" style="width:20%;height:20%;margin:10px;">
+    </div>
+    <h1>PORTFOLIO</h1>
+    <h2>SKOLEPROJEKTER 1. SEMESTER</h2>
+    <!--Rumrejsen-->
+    <h3>
+        PROJEKT 1: RUMREJSEN
+    </h3>
+    <div class="Rumrejsen-startbillede">
+        <img src="Billeder/Rumrejsen.jpg" alt="Rumrejsen" style="width:100%;height:100%;">
+    </div>
+    <p>
+        I det her projekt var der sådan set fri leg - så længe at vi som gruppe lavede et fiktivt rumrejseprogram, og en tilsvarende hjemmeside til. Målgruppen her var fastlagt til at være private mennesker der har råd til rumrejser.<br>
+        <br>Vores koncept "Above Earth" var rumrejser til forskellige planeter, hvor diverse aktiviteter indgår på planeterne, med mulighed for også at gøre det romantisk. Rejserne til planeterne er under meget luksuriøse forhold, hvor der ikke mangler noget. For at få vores gæster (især kendte) til at lave noget af markedsføringen for os, lavede vi hashtagget #LetUsTreatYouLikeGods til Instagram.<br>
+        <br>Min rolle i projektet var bl.a. at kode siden "Rejseinformation" til hjemmesiden, men jeg var også med til at skabe vores visuelle identitet ved at lave logoet til vores koncept "Above Earth":
+    </p>
+    <div class="Rumrejsen-logo">
+        <img src="Billeder/Above Earth logo.png" alt="Above Earth" style="width:60%;height:60%;">
+    </div>
+    <p>
+        Logoet illustrerer, at det er noget der foregår over jorden, og der er brugt en "guld-farve" for at signalere eksklusivitet. Alt i alt et logo der er skræddersyet til målgruppen.<br>
+        <br>De kompetencer jeg har kunne bidrage mest med til projektet, har været idéudvikling og det visuelle udtryk (logo, fonte, farvepalette osv.), samt videreudvikling af vores pitch.<br>
+        <br>Overordnet set arbejdede vi med idéudvikling, sketching, HTML og CSS, Photoshop & billeder samt pitch.
+    </p>
+    <!--Dans, dans, dans-->
+    <h3>
+        PROJEKT 2: DANS, DANS, DANS
+    </h3>
+    <div class="Dans-dans-dans-startbillede">
+        <img src="Billeder/Dans, dans, dans.jpg" alt="Dans, dans, dans" style="width:100%;height:100%;">
+    </div>
+    <p>
+        I det her projekt fik vi til opgave som "webbureau" at lave en hjemmeside til en fiktiv danseskole som kunde, målrettet et specifikt brugersegment (balletdansere). Hver gruppe fik tildelt en dans, og min gruppe fik Ballet. Projektet var opdelt i 2 dele - i 1. del skulle hjemmesiden laves til mobil med den dans vi havde fået, og i 2. del skulle vi overtage en anden gruppes dans og hjemmeside, optimere den og gøre den responsive til computer.<br>
+        <br>Her fandt vores gruppe på danseskolen "Ballet by Birgitte", som er en danseskole der er eget af Birgitte, og erfaren danser. Balletskolen er for dansere i alle aldersgrupper, hvor holdene er opdelt efter alder. Niveauet er middel, og der stræbes ikke nødvendigvis efter at komme ind på Det Kongelige Teater.<br>
+        <br>Her er det logo vi som gruppe udarbejdede:
+    </p>
+    <div class="Dans-dans-dans-logo">
+        <img src="Billeder/Ballet by Birgitte logo.png" alt="Ballet by Birgitte" style="width:40%;height:40%;">
+    </div>
+    <p>
+        Birgittes egen håndskrift er implementeret i logoet, fordi det giver følelsen af noget personligt. Hvis man starter til ballet på hendes danseskole, får man altså ikke kun læring i ballet, men også en del af hendes personlighed, fordi den præger hele danseskolen.<br>
+        <br>Min rolle i projektet var at kode siden "Galleri", skrive logbog, og udover det bidrage til rapporten, brainstormen osv. I projektet prøvede jeg hele tiden at sætte mig i kundens og målgruppens sted, hver gang noget skulle udarbejdes til danseskolen.<br>
+        <br>I 2. del overtog vi en anden gruppes arbejde, som havde fået tildelt Bollywood. Ligesom sidst skrev jeg logbog og dele af rapporten. Her stod jeg også for at lave siden "Hold og priser" om, og udarbejde vores fælles moodboard:
+    </p>
+    <div class="Hold-og-priser">
+        <img src="Billeder/Dans, dans, dans del 2 - hold og priser.jpg" alt="Hold og priser" style="width:70%;height:70%;">
+            </div>
+    <div class="Samlet-moodboard">
+        <img src="Billeder/Samlet moodboard - Bollywood.jpg" alt="Samlet moodboard" style="width:70%;height:70%;">
+    </div>
+    <p>
+        Samlet set har vi i projektet fået en bred forståelse for mange af de fagområder Multimediedesign dækker, heriblandt Design Thinking og Projektstyring, HTML og CSS, UI, Gestaltlove og Designprincipper, Målgrupper og Personaer osv.
+    </p>
+    <!--Video (selvportræt)-->
+    <h3>
+        PROJEKT 3: VIDEO (SELVPORTRÆT)
+    </h3>
+    <div class="Video-startbillede">
+        <img src="Billeder/Video.jpg" alt="Video" style="width:100%;height:100%;">
+    </div>
+    <p>
+        Her fik vi tildelt en partner, hvor vi skulle udarbejde hinandens selvportræt gennem videoformat. Kravet var, det skulle vare 1-2 min. Jeg fik Victor fra min klasse, hvor jeg styrede hvordan hans selvportræt skulle udfolde sig - og omvendt. Vi planlagde hinandens portræt, filmede det, lavede lydoptagelser til det, og redigerede til sidst.
+    </p>
+    <div class="Victor">
+        <img src="Billeder/Victor.jpg" alt="Victor" style="width:70%;height:70%;">
+    </div>
+    <p>
+        Ugen inden vi begyndte at producere film, havde vi en masse teori. Her lærte vi om Billedkomposition, Lys, Framing, Frame-rate, Kompositionsudtryk, Hvidbalance, Lysvinkler, Redigering, Filformater, Billedopløsning, Filkomprimering og mere.<br>
+        <br>Som en del af post-produktionen planlagde jeg også lokationer for, hvor jeg ville filme Victor henne.<br>
+        <br>Der vi begge var helt færdige med at filme hinanden, var det tid til at redigere. Her ses et udklip fra min redigering i Adobe Premiere Pro:
+    </p>
+    <div class="Premiere-pro">
+        <img src="Billeder/Victor Premiere Pro.png" alt="Premiere Pro" style="width:70%;height:70%;">
+    </div>
+    <p>
+        Alt i alt et spændende projekt, hvor vi fik lov til at rive os løs og være kreative. Jeg lærte mere om video- lys- og lydudstyr, hvordan man kan planlægge sin post-produktion, redigering i Adobe Premiere Pro, og generelt teorien bag det hele.
+    </p>
+    <!--Bag rattet-->
+    <h3>
+        PROJEKT 4: BAG RATTET
+    </h3>
+    <div class="Bag-rattet-startbillede">
+        <img src="Billeder/Bag rattet.png" alt="Bag Rattet" style="width:100%;height:100%;">
+    </div>
+    <p>
+        I 1. del fik vi til opgave at udvikle en salgsplatform, med et koncept der vedrører branding af biler, med en tilsvarende hjemmeside der passer til mobiler. Kunden er os selv, altså studerende. I 2. del skulle vi videreudvikle på forretningsdelen af konceptet, så det kunne markedsføres på de sociale medier, og samtidig gøre det responsive til computere.<br>
+        <br>Derfor fandt vores gruppe på konceptet TargetLeasing, som er en leasing virksomhed der udelukkende leaser biler til studerende. Du vælger mellem vores TargetCar 1 eller 2, alt efter behov, men fælles for bilerne og leasingaftalen er, at det er det billigste alternativ der findes til offentlig transport. Bilerne er billige at lease, kører langt på literen, har det mest basale udstyr du har brug for, og der er inkluderet 30.000 km/årligt i aftalen. Alt udover de 30.000 km/årligt betaler man ekstra for. Man er heller ikke bundet til aftalen i en længere periode, og kan derfor opsige den hvis man f.eks. mister sit studiejob.<br>
+        <br>Da processen er vigtig for et godt resultat, brugte vi lang tid på Deskresearch, Interviews, Brugertest, Personaer, Brugerscenarier, Idégenerering, Sketches, Mockups, og generelt på Design Thinking som indebærer de 5 faser: Discovery, Interpretation, Ideation, Experimentation og Evaluation.<br>
+        <br>Fordi jeg er mest grafisk anlagt, lavede jeg vores logo til TargetLeasing:
+    </p>
+    <div class="Bag-rattet-logo">
+        <img src="Billeder/TargetLeasing logo hvid.png" alt="TargetLeasing" style="width:60%;height:60%;">
+    </div>
+    <p>
+        Nøglen symboliserer, at man gennem os kan låse op for mere frihed i ens liv, hvis man vælger at lease en TargetCar. Skydeskiven inde i nøglen er tilstede fordi vi hedder <i>Target</i>Leasing - hos os rammer vi altid plet med prisen!<br>
+        <br>Jeg lavede også en fiktiv reklame til henholdsvis Instagram og Facebook som var en del af del 2, for at give nogle eksempler på hvordan kunne markedsføre os på de sociale medier:
+    </p>
+    <div class="Posts">
+        <img src="Billeder/Instagram Post TargetLeasing.png" alt="Instgram-post" style="width:45%;height:45%;margin:10px;">
+        <img src="Billeder/Facebook Post TargetLeasing.png" alt="Facebook-post" style="width:45%;height:45%;margin:10px;">
+    </div>
+    <p>
+        I hele projektet har jeg stået for meget af det grafiske - optimering af vores mockup, logo, fiktive post på sociale medier, konceptplakat og andet. Jeg har også været med til at researche omkring markedsføring på sociale medier i del 2. Udover det har jeg generelt set hjulpet med rapportskrivningen, og kodet siden "Om os". Mine evner til at kode er minimale, så derfor lagde jeg stor vægt på at min mockup i projektet til gengæld var pæn:
+    </p>
+    <div class="Om-os">
+        <img src="Billeder/Om os mockup TargetLeasing.png" alt="Om os mockup" style="width:60%;height:60%;">
     </div>
 </body>
 </html>
