Flere opdateringer til mine to sider

--- a/Forside.html
+++ b/Forside.html
@@ -22,7 +22,7 @@
     <div class="Præsentationsbillede">
         <img src="Billeder/Præsentationsbillede.png" alt="Præsentationsbillede" style="width:25%;height:25%;">
     </div>
-    <p> Mit navn er Marc, jeg er 20 år gammel, og jeg 
+    <p class="p1"> Mit navn er Marc, jeg er 20 år gammel, og jeg 
         studerer lige nu Multimediedesign på Zealand i Køge. 
         I min fritid dyrker jeg bodybuilding og laver grafisk design. 
         Jeg har været freelance grafisk designer siden jeg var 14 år, 
@@ -31,16 +31,16 @@
         altså bedst når det handler om at ramme en bestemt målgruppe gennem
         visuel kommunikation. Udover det har jeg som person et roligt sind, en
         humoristisk sans, og så er jeg struktureret og arbejdsom.
-    </p>
+    </p class="p1">
     <div class="wrapper">
     <a href="Portfolio.html">
         <button class="Portfolio-knap">PORTFOLIO</button>
     </a>    
     </div>
     <h1>KONTAKT</h1>
-    <p>
+    <p class="p1">
         Udfyld kontaktformularen for at komme i kontakt med mig vedrørende køb, 
         spørgsmål eller andet.
-    </p>
+    </p class="p1">
 </body>
 </html>
