Påbegyndelse af footer

--- a/Forside.html
+++ b/Forside.html
@@ -42,5 +42,11 @@
         Udfyld kontaktformularen for at komme i kontakt med mig vedrørende køb, 
         spørgsmål eller andet.
     </p class="p1">
+    <div class="footer">
+        <p class="footer">
+            © COPYRIGHT 2020 | m-mn.dk<br>
+            ALL RIGHTS RESERVED
+        </p>
+    </div>
 </body>
 </html>
