Footer ændringer + småting

--- a/Forside.html
+++ b/Forside.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--Header-->
     <header>
         <nav>
             <ul class="Menu">
@@ -18,6 +19,7 @@
             </ul>
         </nav>
     </header>
+<!--Om mig-->
     <h1>OM MIG</h1>
     <div class="Præsentationsbillede">
         <img src="Billeder/Præsentationsbillede.png" alt="Præsentationsbillede" style="width:25%;height:25%;">
@@ -31,22 +33,31 @@
         altså bedst når det handler om at ramme en bestemt målgruppe gennem
         visuel kommunikation. Udover det har jeg som person et roligt sind, en
         humoristisk sans, og så er jeg struktureret og arbejdsom.
-    </p class="p1">
+    </p>
+<!--Portfolio-knap-->
     <div class="wrapper">
     <a href="Portfolio.html">
         <button class="Portfolio-knap">PORTFOLIO</button>
     </a>    
     </div>
+<!--Kontakt-->
     <h1>KONTAKT</h1>
     <p class="p1">
         Udfyld kontaktformularen for at komme i kontakt med mig vedrørende køb, 
         spørgsmål eller andet.
-    </p class="p1">
+    </p>
+<!--Footer-->
     <div class="footer">
-        <p class="footer">
+        <p class="p-footer">
             © COPYRIGHT 2020 | m-mn.dk<br>
             ALL RIGHTS RESERVED
         </p>
+        <div class="sociale-medier">
+            <img src="Billeder/Facebook.png" alt="Facebook" style="width:4%;height:4%;margin:10px;">
+            <img src="Billeder/Instagram.png" alt="Instagram" style="width:4%;height:4%;margin:10px;">
+            <img src="Billeder/LinkedIn.png" alt="LinkedIn" style="width:4%;height:4%;margin:10px;">
+            <img src="Billeder/Mail.png" alt="Mail" style="width:4%;height:4%;margin:10px;">
+        </div>
     </div>
 </body>
 </html>
