--- a/Forside.html
+++ b/Forside.html
@@ -22,7 +22,7 @@
 <!--Om mig-->
     <h1>OM MIG</h1>
     <div class="Præsentationsbillede">
-        <img src="Billeder/Præsentationsbillede.png" alt="Præsentationsbillede" style="width:25%;height:25%;">
+        <img src="Billeder/Præsentationsbillede.png" alt="Præsentationsbillede" style="width:30%;height:30%;">
     </div>
     <p class="p1"> Mit navn er Marc, jeg er 20 år gammel, og jeg 
         studerer lige nu Multimediedesign på Zealand i Køge. 
@@ -46,6 +46,23 @@
         Udfyld kontaktformularen for at komme i kontakt med mig vedrørende køb, 
         spørgsmål eller andet.
     </p>
+    <div class="kontaktformular">
+        <div class="Navn">
+            <input type="text" name="" value="" placeholder="Navn">
+        </div>
+        <div class="Efternavn">
+            <input type="text" name="" value="" placeholder="Efternavn">
+        </div>
+        <div class="E-mail">
+            <input type="text" name="" value="" placeholder="E-mail">
+        </div>
+        <div class="Besked">
+            <textarea></textarea>
+        </div>
+    </div>
+    <div class="wrapper">
+        <button class="Send-knap">SEND</button>
+    </div>
 <!--Footer-->
     <div class="footer">
         <p class="p-footer">
