Tilføjelse af footer til portfolio-siden

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -174,5 +174,18 @@
     <div class="Om-os">
         <img src="Billeder/Om os mockup TargetLeasing.png" alt="Om os mockup" style="width:60%;height:60%;">
     </div>
+    <!--Footer-->
+    <div class="footer">
+        <p class="p-footer">
+            © COPYRIGHT 2020 | m-mn.dk<br>
+            ALL RIGHTS RESERVED
+        </p>
+        <div class="sociale-medier">
+            <img src="Billeder/Facebook.png" alt="Facebook" style="width:4%;height:4%;margin:10px;">
+            <img src="Billeder/Instagram.png" alt="Instagram" style="width:4%;height:4%;margin:10px;">
+            <img src="Billeder/LinkedIn.png" alt="LinkedIn" style="width:4%;height:4%;margin:10px;">
+            <img src="Billeder/Mail.png" alt="Mail" style="width:4%;height:4%;margin:10px;">
+        </div>
+    </div>
 </body>
 </html>
